# jackbmontgomery.com

./: .gitmodules  README.md  export.py  generate_favicon.py  hugo.toml  marmite.yaml  pyproject.toml  requirements.txt
.github/workflows/: deploy.yml
assets/css/: main.css
assets/js/: main.js
content/: 2026-05-29-21-14-49-hello-world.md  2026-05-30-12-32-03-chapter-after-oxford.md  2026-06-10-12-32-03-chapter-after-oxford.md  _hero.md  _references.md  about.md  index-about.md
content/posts/: _index.md  about.md
layouts/: index.html
layouts/partials/: footer.html  head.html  header.html  list.html  math.html  post.html
layouts/shortcodes/: details.html
notebooks/: _ideas.md  choas-henon-heiles.ipynb  doing-nothing-in-particular.ipynb  neural-network-jax.ipynb  sequential-computation-lax-scan.ipynb  solving-odes-with-neural-networks.ipynb
public/: 404.html  index.html  index.xml  sitemap.xml
public/categories/: index.html  index.xml
public/css/: main.min.css
public/index-about/: index.html
public/js/: bundle.min.02fcbfb1f0209d7e3a5895f774546e8a8fb5eda33448c3a47bf74271c0329b6f.js  bundle.min.04ede6331c9a5f70c5d0021b15a663593615232f3f9f412e35089bc737a3f526.js  bundle.min.06203581272bdcd5a221bf6f19b0b7e7e6376c00a171548c20818ceb3b672702.js  bundle.min.06e226a48b3ada22758c8564d25720d9cf84091154a1fcb751195e7a99746a51.js  bundle.min.081ffb068814ce6806697612acd67a80eea0006931ae48763e931fa0aab60cb2.js  bundle.min.0a4a3c6847eafeb3243c5f84c42c4477d5ec6f4962384817c4d5a4a0772a9810.js  bundle.min.0de0fea56d53857d801bb629cc2be2a8176a3de0b9571c30f3403629beab4abf.js  (+40 more)
(+39 files in other folders)
