[project]
name = "jackbmontgomery-com"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "manim>=0.19.0",
    "matplotlib>=3.10.0",
    "shutils>=0.1.0",
    "torch>=2.5.1",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
    "nbconvert>=7.16.5",
    "nbformat>=5.10.4",
]
